{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 20,
  "lineage": "353517a9-c768-6c59-5489-4b737351e65f",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_iap_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-03-09T00:23:41.314-07:00",
            "deny": [],
            "description": "Allow SSH via IAP tunnel only",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/springboot-vm-demo/global/firewalls/credresolve-allow-iap-ssh",
            "log_config": [],
            "name": "credresolve-allow-iap-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/springboot-vm-demo/global/networks/credresolve-vpc-mumbai",
            "priority": 1000,
            "project": "springboot-vm-demo",
            "self_link": "https://www.googleapis.com/compute/v1/projects/springboot-vm-demo/global/firewalls/credresolve-allow-iap-ssh",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2026-03-09T00:23:41.254-07:00",
            "deny": [],
            "description": "Allow all internal VPC traffic",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/springboot-vm-demo/global/firewalls/credresolve-allow-internal",
            "log_config": [],
            "name": "credresolve-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/springboot-vm-demo/global/networks/credresolve-vpc-mumbai",
            "priority": 1000,
            "project": "springboot-vm-demo",
            "self_link": "https://www.googleapis.com/compute/v1/projects/springboot-vm-demo/global/firewalls/credresolve-allow-internal",
            "source_ranges": [
              "10.1.0.0/24",
              "10.1.2.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_metabase",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-03-09T00:23:41.477-07:00",
            "deny": [],
            "description": "Allow Metabase UI port",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/springboot-vm-demo/global/firewalls/credresolve-allow-metabase",
            "log_config": [],
            "name": "credresolve-allow-metabase",
            "network": "https://www.googleapis.com/compute/v1/projects/springboot-vm-demo/global/networks/credresolve-vpc-mumbai",
            "priority": 1000,
            "project": "springboot-vm-demo",
            "self_link": "https://www.googleapis.com/compute/v1/projects/springboot-vm-demo/global/firewalls/credresolve-allow-metabase",
            "source_ranges": [
              "10.1.0.0/24",
              "10.1.2.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "metabase"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_postgres",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "5432"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-03-09T00:23:41.531-07:00",
            "deny": [],
            "description": "Allow PostgreSQL access from within VPC",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/springboot-vm-demo/global/firewalls/credresolve-allow-postgres",
            "log_config": [],
            "name": "credresolve-allow-postgres",
            "network": "https://www.googleapis.com/compute/v1/projects/springboot-vm-demo/global/networks/credresolve-vpc-mumbai",
            "priority": 1000,
            "project": "springboot-vm-demo",
            "self_link": "https://www.googleapis.com/compute/v1/projects/springboot-vm-demo/global/firewalls/credresolve-allow-postgres",
            "source_ranges": [
              "10.1.0.0/24",
              "10.1.2.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "all-db",
              "prod-database"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "6379"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-03-09T00:23:41.338-07:00",
            "deny": [],
            "description": "Allow Redis access from within VPC",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/springboot-vm-demo/global/firewalls/credresolve-allow-redis",
            "log_config": [],
            "name": "credresolve-allow-redis",
            "network": "https://www.googleapis.com/compute/v1/projects/springboot-vm-demo/global/networks/credresolve-vpc-mumbai",
            "priority": 1000,
            "project": "springboot-vm-demo",
            "self_link": "https://www.googleapis.com/compute/v1/projects/springboot-vm-demo/global/firewalls/credresolve-allow-redis",
            "source_ranges": [
              "10.1.0.0/24",
              "10.1.2.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "redis"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "communication_prod_database",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260226",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/springboot-vm-demo/zones/asia-south1-b/disks/communication-prod-database"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/springboot-vm-demo/zones/asia-south1-b/instances/communication-prod-database",
            "instance_id": "4548445153505037175",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "enable-oslogin": "TRUE"
            },
            "metadata_fingerprint": "LB1JOtrH2-4=",
            "name": "communication-prod-database",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/springboot-vm-demo/global/networks/credresolve-vpc-mumbai",
                "network_ip": "10.1.2.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/springboot-vm-demo/regions/asia-south1/subnetworks/credresolve-private-subnet",
                "subnetwork_project": "springboot-vm-demo"
              }
            ],
            "project": "springboot-vm-demo",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/springboot-vm-demo/zones/asia-south1-b/instances/communication-prod-database",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "all-db",
              "prod-database"
            ],
            "tags_fingerprint": "u2JZ-k5JxBk=",
            "zone": "asia-south1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "credresolve_data_analytics_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260226",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/springboot-vm-demo/zones/asia-south1-b/disks/credresolve-data-analytics-db"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/springboot-vm-demo/zones/asia-south1-b/instances/credresolve-data-analytics-db",
            "instance_id": "5573796375549954935",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "enable-oslogin": "TRUE"
            },
            "metadata_fingerprint": "LB1JOtrH2-4=",
            "name": "credresolve-data-analytics-db",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/springboot-vm-demo/global/networks/credresolve-vpc-mumbai",
                "network_ip": "10.1.2.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/springboot-vm-demo/regions/asia-south1/subnetworks/credresolve-private-subnet",
                "subnetwork_project": "springboot-vm-demo"
              }
            ],
            "project": "springboot-vm-demo",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/springboot-vm-demo/zones/asia-south1-b/instances/credresolve-data-analytics-db",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "all-db"
            ],
            "tags_fingerprint": "aHjLWlK_3iE=",
            "zone": "asia-south1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "credresolve_metabase",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260226",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/springboot-vm-demo/zones/asia-south1-b/disks/credresolve-metabase"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/springboot-vm-demo/zones/asia-south1-b/instances/credresolve-metabase",
            "instance_id": "8813012739703425911",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "enable-oslogin": "TRUE"
            },
            "metadata_fingerprint": "9WcB-UFuWiA=",
            "metadata_startup_script": "#!/bin/bash\napt-get update -y\napt-get install -y openjdk-11-jre-headless wget\nmkdir -p /opt/metabase\nwget -O /opt/metabase/metabase.jar https://downloads.metabase.com/v0.47.0/metabase.jar\ncat \u003e /etc/systemd/system/metabase.service \u003c\u003cEOF\n[Unit]\nDescription=Metabase\nAfter=network.target\n[Service]\nExecStart=/usr/bin/java -jar /opt/metabase/metabase.jar\nRestart=always\nEnvironment=MB_DB_TYPE=h2\nWorkingDirectory=/opt/metabase\n[Instal [...]
            "name": "credresolve-metabase",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/springboot-vm-demo/global/networks/credresolve-vpc-mumbai",
                "network_ip": "10.1.2.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/springboot-vm-demo/regions/asia-south1/subnetworks/credresolve-private-subnet",
                "subnetwork_project": "springboot-vm-demo"
              }
            ],
            "project": "springboot-vm-demo",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/springboot-vm-demo/zones/asia-south1-b/instances/credresolve-metabase",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "metabase"
            ],
            "tags_fingerprint": "FpN5EpS3sSY=",
            "zone": "asia-south1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "credresolve_tiny_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260226",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/springboot-vm-demo/zones/asia-south1-b/disks/credresolve-tiny-db"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/springboot-vm-demo/zones/asia-south1-b/instances/credresolve-tiny-db",
            "instance_id": "4077000865599441783",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "enable-oslogin": "TRUE"
            },
            "metadata_fingerprint": "LB1JOtrH2-4=",
            "name": "credresolve-tiny-db",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/springboot-vm-demo/global/networks/credresolve-vpc-mumbai",
                "network_ip": "10.1.2.5",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/springboot-vm-demo/regions/asia-south1/subnetworks/credresolve-private-subnet",
                "subnetwork_project": "springboot-vm-demo"
              }
            ],
            "project": "springboot-vm-demo",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/springboot-vm-demo/zones/asia-south1-b/instances/credresolve-tiny-db",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "all-db"
            ],
            "tags_fingerprint": "aHjLWlK_3iE=",
            "zone": "asia-south1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "naadh_database_stage",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260226",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/springboot-vm-demo/zones/asia-south1-b/disks/naadh-database-stage"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/springboot-vm-demo/zones/asia-south1-b/instances/naadh-database-stage",
            "instance_id": "3712224353937771383",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "enable-oslogin": "TRUE"
            },
            "metadata_fingerprint": "LB1JOtrH2-4=",
            "name": "naadh-database-stage",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/springboot-vm-demo/global/networks/credresolve-vpc-mumbai",
                "network_ip": "10.1.2.7",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/springboot-vm-demo/regions/asia-south1/subnetworks/credresolve-private-subnet",
                "subnetwork_project": "springboot-vm-demo"
              }
            ],
            "project": "springboot-vm-demo",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/springboot-vm-demo/zones/asia-south1-b/instances/naadh-database-stage",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "all-db"
            ],
            "tags_fingerprint": "aHjLWlK_3iE=",
            "zone": "asia-south1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "naadh_production_database",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260226",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/springboot-vm-demo/zones/asia-south1-b/disks/naadh-production-database"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/springboot-vm-demo/zones/asia-south1-b/instances/naadh-production-database",
            "instance_id": "1757593202908711759",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "enable-oslogin": "TRUE"
            },
            "metadata_fingerprint": "LB1JOtrH2-4=",
            "name": "naadh-production-database",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/springboot-vm-demo/global/networks/credresolve-vpc-mumbai",
                "network_ip": "10.1.2.9",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/springboot-vm-demo/regions/asia-south1/subnetworks/credresolve-private-subnet",
                "subnetwork_project": "springboot-vm-demo"
              }
            ],
            "project": "springboot-vm-demo",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/springboot-vm-demo/zones/asia-south1-b/instances/naadh-production-database",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "all-db",
              "prod-database"
            ],
            "tags_fingerprint": "u2JZ-k5JxBk=",
            "zone": "asia-south1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "redis_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260226",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/springboot-vm-demo/zones/asia-south1-b/disks/redis-server"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/springboot-vm-demo/zones/asia-south1-b/instances/redis-server",
            "instance_id": "1598071546235308918",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "enable-oslogin": "TRUE"
            },
            "metadata_fingerprint": "xIaTcazMyAQ=",
            "metadata_startup_script": "#!/bin/bash\napt-get update -y\napt-get install -y redis-server\nsed -i 's/bind 127.0.0.1/bind 0.0.0.0/' /etc/redis/redis.conf\nsed -i 's/# requirepass foobared/requirepass RedisSecure@2024/' /etc/redis/redis.conf\nsystemctl restart redis-server\nsystemctl enable redis-server\necho \"Redis setup complete\" \u003e\u003e /var/log/startup-script.log\n",
            "name": "redis-server",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/springboot-vm-demo/global/networks/credresolve-vpc-mumbai",
                "network_ip": "10.1.2.8",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/springboot-vm-demo/regions/asia-south1/subnetworks/credresolve-private-subnet",
                "subnetwork_project": "springboot-vm-demo"
              }
            ],
            "project": "springboot-vm-demo",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/springboot-vm-demo/zones/asia-south1-b/instances/redis-server",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "redis"
            ],
            "tags_fingerprint": "aLX2GdGntbo=",
            "zone": "asia-south1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "redis_server_stage",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260226",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/springboot-vm-demo/zones/asia-south1-b/disks/redis-server-stage"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/springboot-vm-demo/zones/asia-south1-b/instances/redis-server-stage",
            "instance_id": "3756193330011294582",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "enable-oslogin": "TRUE"
            },
            "metadata_fingerprint": "xIaTcazMyAQ=",
            "metadata_startup_script": "#!/bin/bash\napt-get update -y\napt-get install -y redis-server\nsed -i 's/bind 127.0.0.1/bind 0.0.0.0/' /etc/redis/redis.conf\nsed -i 's/# requirepass foobared/requirepass RedisSecure@2024/' /etc/redis/redis.conf\nsystemctl restart redis-server\nsystemctl enable redis-server\necho \"Redis setup complete\" \u003e\u003e /var/log/startup-script.log\n",
            "name": "redis-server-stage",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/springboot-vm-demo/global/networks/credresolve-vpc-mumbai",
                "network_ip": "10.1.2.6",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/springboot-vm-demo/regions/asia-south1/subnetworks/credresolve-private-subnet",
                "subnetwork_project": "springboot-vm-demo"
              }
            ],
            "project": "springboot-vm-demo",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/springboot-vm-demo/zones/asia-south1-b/instances/redis-server-stage",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "redis"
            ],
            "tags_fingerprint": "aLX2GdGntbo=",
            "zone": "asia-south1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "description": "Credresolve VPC - Mumbai region",
            "enable_ula_internal_ipv6": false,
            "id": "projects/springboot-vm-demo/global/networks/credresolve-vpc-mumbai",
            "mtu": 0,
            "name": "credresolve-vpc-mumbai",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "5640418980532571017",
            "project": "springboot-vm-demo",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/springboot-vm-demo/global/networks/credresolve-vpc-mumbai"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-03-09T00:23:42.006-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/springboot-vm-demo/regions/asia-south1/routers/credresolve-router",
            "name": "credresolve-router",
            "network": "https://www.googleapis.com/compute/v1/projects/springboot-vm-demo/global/networks/credresolve-vpc-mumbai",
            "project": "springboot-vm-demo",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/springboot-vm-demo/regions/asia-south1/routers/credresolve-router"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_network_tier": "PREMIUM",
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "springboot-vm-demo/asia-south1/credresolve-router/credresolve-nat",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "credresolve-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "springboot-vm-demo",
            "region": "asia-south1",
            "router": "credresolve-router",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "projects/springboot-vm-demo/regions/asia-south1/subnetworks/credresolve-private-subnet",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_router.router",
            "google_compute_subnetwork.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-03-09T00:23:42.463-07:00",
            "gateway_address": "10.1.2.1",
            "id": "projects/springboot-vm-demo/regions/asia-south1/subnetworks/credresolve-private-subnet",
            "ip_cidr_range": "10.1.2.0/24",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_10_MIN",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "credresolve-private-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/springboot-vm-demo/global/networks/credresolve-vpc-mumbai",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "springboot-vm-demo",
            "purpose": "PRIVATE",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/springboot-vm-demo/regions/asia-south1/subnetworks/credresolve-private-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-03-09T00:23:43.123-07:00",
            "gateway_address": "10.1.0.1",
            "id": "projects/springboot-vm-demo/regions/asia-south1/subnetworks/credresolve-public-subnet",
            "ip_cidr_range": "10.1.0.0/24",
            "name": "credresolve-public-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/springboot-vm-demo/global/networks/credresolve-vpc-mumbai",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "springboot-vm-demo",
            "purpose": "PRIVATE",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/springboot-vm-demo/regions/asia-south1/subnetworks/credresolve-public-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}